Fixed input placeholder being unreadable

--- a/src/forms.scss
+++ b/src/forms.scss
@@ -5,6 +5,11 @@
 
 input, select, textarea {
   cursor: pointer;
+  color: $input-color;
+}
+
+input::placeholder {
+  color: $input-color;
 }
 
 input:focus, textarea:focus {
