--- a/src/variables.scss
+++ b/src/variables.scss
@@ -65,3 +65,6 @@ $tbody-color: #fff;
 $sidebar-background: #f5f5f4;
 $nav-item-active: #dcdfe1;
 $nav-item-icon-color: #737475;
+
+// Form
+$input-color: lighten(black, 50%);
