--- a/src/variables_dark.scss
+++ b/src/variables_dark.scss
@@ -21,7 +21,7 @@ $line-height-default: 1.6 !default;
 // Main colors
 $primary-color: #3b99fc !default;
 // $chrome-color:  #fff !default;
-$chrome-color:  transparent !default;
+$chrome-color: transparent !default;
 
 // Copy
 $gray-color: #fff !default;
@@ -66,3 +66,6 @@ $tbody-color: rgb(170, 170, 170);
 $sidebar-background: invert(#f5f5f4);
 $nav-item-active: darken(#dcdfe1, 25%);
 $nav-item-icon-color: lighten(#737475, 45%);
+
+// Form
+$input-color: darken(#fff, 20%);
